更新一些新问题

--- a/遇到的问题总结/flex布局.html
+++ b/遇到的问题总结/flex布局.html
@@ -3,7 +3,26 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style>
+			.far{
+				width: 200px;
+				height: 200px;
+				background-color: yellow;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				
+			}
+			.son{
+				width: 10px;
+				height: 10px;
+				background-color: red;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="far">
+			<siv class="son"></siv>
+		</div>
 	</body>
 </html>
