async与await的理解和使用

--- a/遇到的问题总结/promise.html
+++ b/遇到的问题总结/promise.html
@@ -56,7 +56,7 @@
             });
         }
         //假设请求一个地址
-        var p = ajax("GET", "/newapi/123")
+        var p = ajax("GET", "js/dataName.json")
         p.then(resolve => {
             alert("成功了")
             console.log(resolve)
